[gd_scene load_steps=2 format=3 uid="uid://4msbts6xms8m"]

[ext_resource type="Script" uid="uid://bbou72dlyxibt" path="res://constellation_card_ui.gd" id="1_ehiro"]

[node name="ConstellationCardUi" type="PanelContainer"]
script = ExtResource("1_ehiro")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ConstellationNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="KeystoneNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="SelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select"
